2016-02-11  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO:

	0000 use download instead of HTTPClient or Request!  Remove those from the requirement list.
	0000 logisticloss: need a loss function to use with a single probability output with sigm.
	0000 installation on a cpu machine produces many warnings and errors, find a way to conditionally load gpu support.
	0000 bmul is incomplete, complete and test it.
	0000 BUG: repeat is buggy, it doesn't work if we remove o... from the definition of mlp.
	0000 BUG: soft is buggy, its derivative won't work if used inside the network, go back to xentloss/softloss design.
	0000 add cpu conv tests to cputest.jl, test HTTPClient, register with Julia
	0000 LoadError: unrecognized keyword argument "nrepeat" https://github.com/denizyuret/Knet.jl/issues/3
	0000 Make Knet.gpu() take an int option and set the device on multi-gpu machine, by default have it search for the device with the least memory load.
	0000 NaN problem: julia ModelC-S-xyz.jl --lrate 0.263519 --decay 0.131408 --dropout 0.263145
	0000 Register project under Julia (probably after fixing the CUSPARSE incompatibility and HTTPClient issue and documentation TODO fixes).
	0000 Write Knet paper, send somewhere.
	0000 decide ml course concept map and book chapters
	0000 fix new cusparse.jl v4
	0000 transfer to balina (tenten, wikidump)
	0000 unit test optimizers from http://cs231n.github.io/neural-networks-3/#ada
	0015 - profile lstm and figure out multi-gpu: amazon has multi-gpu machines: http://www.nvidia.com/docs/io/116711/sc11-multi-gpu.pdf
	0025 speed comparison with barret code on charlm
	0030 switch back to HTTPClient in REQUIRE and in tutorial, solve problem at koc: libcurl fails, libcurl/master passes (this is because it doesn't test anything, the regular version calls HTTPClient.test), (cancel: see what changed, apply fix to httpclient), with regular libcurl v0.2.0 osx and ubuntu works, centos6 does not.