@@ -5,3 +5,16 @@ Optimization
 References
 ----------
 
+* http://www.deeplearningbook.org/contents/numerical.html (basic intro in 4.3)
+* http://www.deeplearningbook.org/contents/optimization.html (8.1 generalization, 8.2 problems, 8.3 algorithms, 8.4 init, 8.5 adaptive lr, 8.6 approx 2nd order, 8.7 meta)
+* http://arxiv.org/abs/1412.6544 (Goodfellow paper)
+* https://d396qusza40orc.cloudfront.net/neuralnets/lecture_slides/lec6.pdf (hinton slides)
+* https://d396qusza40orc.cloudfront.net/neuralnets/lecture_slides/lec8.pdf (hinton slides)
+* http://www.denizyuret.com/2015/03/alec-radfords-animations-for.html
+* http://machinelearning.wustl.edu/mlpapers/paper_files/icml2010_Martens10.pdf
+* http://arxiv.org/abs/1503.05671
+* http://arxiv.org/abs/1412.1193
+* http://www.springer.com/us/book/9780387303031 (nocedal and wright)
+* http://www.nrbook.com (numerical recipes)
+* https://maths-people.anu.edu.au/~brent/pub/pub011.html (without derivatives)
+* http://stanford.edu/~boyd/cvxbook/ (only convex optimization)
