@@ -2,6 +2,9 @@
 
 	* TODO:
 
+	0000 The delta-bar-delta algorithm (Jacobs, 1988) is an early heuristic approachto adapting individual learning rates for model parameters during training. Theapproach is based on a simple idea: if the partial derivative of the loss, with respectto a given model parameter, remains the same sign, then the learning rate shouldincrease. If the partial derivative with respect to that parameter changes sign,then the learning rate should decrease. Of course, this kind of rule can only beapplied to full batch optimization
+	0000 check the momentum definition compared to the Bengio book.	does alpha=0.99 mean the same thing?
+	0000 define soft73loss to be the old xentloss, i.e. softmax + cross-entropy loss, define xentloss to follow soft layer?  for binary input we have the same problem, logisticloss vs sigmloss for sigmoid followed by logistic loss?
 	0000 use download instead of HTTPClient or Request!  Remove those from the requirement list.
 	0000 logisticloss: need a loss function to use with a single probability output with sigm.
 	0000 installation on a cpu machine produces many warnings and errors, find a way to conditionally load gpu support.
